# pyimaskill

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
docs/: api.md  使用说明.md
examples/: basic_usage.py  file_upload.py
src/pyimaskill/: __init__.py  client.py  config.py  exceptions.py
src/pyimaskill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyimaskill/api/: knowledge.py  notes.py
src/pyimaskill/models/: __init__.py  base.py  knowledge.py  notes.py
src/pyimaskill/utils/: encoding.py  pagination.py
tests/: conftest.py  test_client.py  test_config.py  test_exceptions.py
