[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyimaskill"
version = "1.1.3"
description = "Python client library for IMA OpenAPI — manage notes and knowledge bases programmatically"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "AJay13", email = "1599121712@qq.com"},
]
keywords = ["ima", "openapi", "notes", "knowledge-base", "qq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://ima.qq.com"
Repository = "https://github.com/AJayBBB/pyimaskill"
Documentation = "https://github.com/AJayBBB/pyimaskill#readme"
"Bug Tracker" = "https://github.com/AJayBBB/pyimaskill/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyimaskill = ["py.typed"]

[tool.ruff]
target-version = "py37"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.7"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
