[metadata]
name = pyimaskill
version = attr: pyimaskill.__version__
description = Python client library for IMA OpenAPI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.31.0
    pydantic>=2.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    ruff>=0.4
    mypy>=1.0
    responses>=0.23

[mypy]
python_version = 3.7
strict = True
warn_return_any = True
warn_unused_configs = True
